
2017-11-10  Edward Hart <edward.dan.hart@gmail.com>

	* general: added binary-comp-1 option (feature request #272).

2017-11-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: FR #158 added perform-varying-without-by (COBOL2002+)

2017-11-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* default.conf: added aliases HIGH-VALUES/LOW-VALUES/VALUES/ZEROES/ZEROS
	* acu.conf: heavily updated from MF Studio Enterprise reserved word list

2017-11-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobol85.words, ibm.words, mvs.words, mf.words rm.words, xopen.conf:
	  added DEBUG-ITEM to be handled as register

2017-11-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobol85.conf, ibm-strict.conf, mvs-strict.conf, mf-strict.conf,
	  rm-strict.conf: fixed "debugging-mode" to be "ok" (only use-for-debugging
	  is obsolete in COBOL 85, debugging-mode became obsolete with COBOL 2002)
	* default.conf: changed use-for-debugging to "ok"
	* runtime.cfg: included COB_SET_DEBUG in the documentation

2017-10-06  Edward Hart <edward.dan.hart@gmail.com>

	* general: added record-delimiter, sequential-delimiters and
	  record-delim-with-fixed-recs options.

2017-09-18  Ron Norman <rjn@inglenet.com>

	* general: Added option for disallowing SELECT ASSIGN and RELATIVE
	  KEY fields to be in other than WORKING-STORAGE locations

2017-09-16  Edward Hart <edward.dan.hart@gmail.com>

	* ibm.words: updated to Enterprise COBOL V6.2.
	* general: added free-redefines-position option.

2017-09-10  Edward Hart <edward.dan.hart@gmail.com>

	* general: added line-col-zero-default and display-special-fig-consts
	  options.

2017-09-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* default.conf, mf-strict.conf: set incorrect-conf-sec-order
	  from "error" to "ok"

2017-08-11  Edward Hart <edward.dan.hart@gmail.com>

	* general: moved all register definitions to the words files.