@@ -480,7 +480,6 @@ reserved:	VALUES=VALUE
 reserved:	VARBINARY
 reserved:	VARYING
 reserved:	WHEN
-reserved:	WHEN-COMPILED
 reserved:	WITH
 reserved:	WORDS
 reserved:	WORKING-STORAGE
